--- a/_config.yml
+++ b/_config.yml
@@ -2,17 +2,17 @@
 title: MY Blog
 SEOTitle: yilimibomb的博客 | MY Blog
 header-img: img/post-bg-desk.jpg
-email: happylife360@gmail.com
+# email: happylife360@gmail.com
 description: "Every failure is leading towards success."
 keyword: "MY, MY Blog, yilimibomb的博客"
-url: "http://yilimibomb.github.io"          # your host, for absolute URL
+# url: "http://yilimibomb.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/yilimibomb/yilimibomb.github.io.git" # you code repository
+# github_repo: "https://github.com/yilimibomb/yilimibomb.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
-sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+# sidebar-about-description: "Goals determine what you going to be!"
+# sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
