--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ﻿# Site settings
 title: MY Blog
 SEOTitle: yilimibomb的博客 | MY Blog
-header-img: img/post-bg-desk.jpeg
+header-img: /img/pexels-photo-615060.jpeg
 # email: happylife360@gmail.com
 description: "Every failure is leading towards success."
 keyword: "MY, MY Blog, yilimibomb的博客"
@@ -11,8 +11,8 @@ baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
- sidebar-about-description: "Goals determine what you going to be!"
- sidebar-avatar: /img/avator.jpg     # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "Goals determine what you going to be!"
+sidebar-avatar: /img/avator.jpg     # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
