--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ﻿# Site settings
 title: MY Blog
 SEOTitle: yilimibomb的博客 | MY Blog
-header-img: /img/pexels-photo-615060.jpeg
+header-img: img/desk.jpeg
 # email: happylife360@gmail.com
 description: "Every failure is leading towards success."
 keyword: "MY, MY Blog, yilimibomb的博客"
