--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ﻿# Site settings
 title: MY Blog
 SEOTitle: yilimibomb的博客 | MY Blog
-header-img: img/desk.jpeg
+header-img: img/index-photo.jpeg
 # email: happylife360@gmail.com
 description: "Every failure is leading towards success."
 keyword: "MY, MY Blog, yilimibomb的博客"
@@ -19,10 +19,10 @@ sidebar-avatar: /img/avator.jpg     # use absolute URL, seeing it's used in both
 # SNS settings
 RSS: false
 # weibo_username:     
-zhanku_username:  chengxunxun.zcool.com.cn   
-github_username:    
-facebook_username:  
-jianshu_username:   
+# zhanku_username:  chengxunxun.zcool.com.cn   
+# github_username:    
+# facebook_username:  
+# jianshu_username:   
 #twitter_username:   
 
 
